Homepage : déplacement "a propos" sur la home / ajout skills bloc / ajout footer

--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -9,7 +9,7 @@ const { url = "#", text = "Découvrir", additionalClass } = Astro.props;
 ---
 
 <div class=`btn cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:w-full relative ${additionalClass}`>
-	<a class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-fantasy-50" href={url}>{text}</a>
+	<a class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-firefly-900" href={url}>{text}</a>
 </div>
 
 <style lang="postcss" is:global>
