--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -10,7 +10,7 @@ const links = [
 	},
 	{
 		text: "à propos",
-		url: "/a-propos"
+		url: "/#a-propos"
 	},
 	{
 		text: "contact",
@@ -33,7 +33,7 @@ const links = [
 				links.map((link) => (
 					<li>
 						<a
-							class="link w-fit text-4xl uppercase leading-normal text-fantasy-50 transition-colors hover:text-firefly-900 lg:text-6xl"
+							class="link nav w-fit text-4xl uppercase leading-normal text-fantasy-50 transition-colors hover:text-firefly-900 lg:text-6xl"
 							href={link.url}
 						>
 							{link.text}
