--- a/src/components/homepage/Maillage.astro
+++ b/src/components/homepage/Maillage.astro
@@ -37,7 +37,7 @@
 			>
 			</div>
 			<a
-				href="/a-propos"
+				href="#a-propos"
 				class="flex h-full w-full items-center justify-center bg-fantasy-50/70 bg-texture bg-top text-center font-primary md:text-2xl lg:text-3xl 2xl:text-4xl"
 			>
 				un peu plus <br /> sur moi
@@ -53,7 +53,7 @@
 
 			<a
 				href="/projets"
-				class="flex h-full w-full items-center justify-center bg-fantasy-50/70 bg-texture bg-bottom text-center font-primary md:text-2xl lg:text-3xl 2xl:text-4xl"
+				class="nav flex h-full w-full items-center justify-center bg-fantasy-50/70 bg-texture bg-bottom text-center font-primary md:text-2xl lg:text-3xl 2xl:text-4xl"
 			>
 				quelques <br />projets
 			</a>
