--- a/src/components/common/Introduction.astro
+++ b/src/components/common/Introduction.astro
@@ -1,14 +1,18 @@
 ---
-/* interface Props {
-  title: string;
-  description: string;
-} */
+interface Props {
+	title: string;
+	description: string;
+	image: {
+		src: string;
+		description: string;
+	};
+}
 const { title, description, image } = Astro.props;
 ---
 
-<section class="bg-fantasy-50 lg:flex lg:h-screen lg:flex-row lg:flex-nowrap">
-	<div class="flex h-[30vh] items-end justify-start bg-firefly-900 bg-texture lg:h-full lg:w-1/4 lg:items-start lg:justify-end">
-		<h1 class="title relative z-10 w-fit text-firefly-500 lg:mt-24 lg:translate-x-1/3" data-menu-text="projets">
+<section class="introduction bg-fantasy-50 lg:flex lg:h-screen lg:flex-row lg:flex-nowrap">
+	<div class="flex h-[30vh] items-end justify-start bg-firefly-900 bg-texture lg:w-1/4 lg:items-start lg:justify-end">
+		<h1 class="title relative z-10 w-fit text-firefly-500 lg:mt-24 lg:translate-x-1/3">
 			{title}.
 		</h1>
 	</div>
@@ -16,8 +20,11 @@ const { title, description, image } = Astro.props;
 		class="lg:flex lg:h-full lg:w-3/4 lg:flex-row lg:space-x-10 lg:p-3 lg:pt-20 xl:space-x-16 xl:p-10 xl:pt-28 2xl:space-x-32 2xl:p-14 2xl:pt-36"
 	>
 		<div class="flex h-[70vh] flex-col items-end justify-between px-3 py-10 lg:h-full lg:w-1/3 lg:flex-row lg:p-0 xl:w-2/5">
-			<!-- À CHANGER POUR SOURCE IMAGE -->
-			<img class="h-[90%] w-3/5 object-cover object-center lg:h-[50vh] lg:w-full xl:h-[60vh]" src="/projets/test.webp" alt="lorem" />
+			<img
+				class="h-[90%] w-3/5 object-cover object-center lg:h-[50vh] lg:w-full xl:h-[60vh]"
+				src={image.src}
+				alt={image.description}
+			/>
 			<div class="mt-6 h-[1px] w-3/4 self-center bg-firefly-500 lg:hidden lg:h-40 lg:w-[1px]"></div>
 		</div>
 		<div class="p-3 pb-10 lg:w-2/3 lg:p-0 xl:w-3/5">
@@ -25,7 +32,7 @@ const { title, description, image } = Astro.props;
 		</div>
 	</div>
 </section>
-<style lang="postcss">
+<style lang="postcss" is:global>
   @media screen and (min-width: 1024px) {
     .intro-description::before {
       content: "";
