--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Maillage from "../components/homepage/Maillage.astro";
+import Introduction from "../components/common/Introduction.astro";
+import Skills from "../components/homepage/Skills.astro";
 
 const title = "Mélanie Casu - portfolio";
 ---
 
-<Layout title={title} menuText="accueil">
-	<main class="h-screen bg-fantasy-50 opacity-0">
-		<h1 class="title z-10 ml-7 w-fit text-center text-firefly-900" data-menu-text="homepage">Homepage.</h1>
+<Layout title={title} textureFooter={false}>
+	<main class="opacity- h-screen bg-fantasy-50">
+		<h1 class="title z-10 ml-7 w-fit text-center text-firefly-900">Homepage.</h1>
 		<p class="mt-20 font-light text-firefly-900">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam nulla vitae ullamcorper pretium. Integer mauris sem,
 			scelerisque non tempus nec, consequat vitae lectus. Nullam purus libero, efficitur eget odio in, mollis laoreet nisl. In gravida
@@ -17,8 +19,28 @@ const title = "Mélanie Casu - portfolio";
 	</main>
 
 	<Maillage />
-	<div class="flex h-screen flex-col items-center justify-center bg-fantasy-50">
-		<p>CONTACT</p>
-		<p>linkedin / mailto / github</p>
+	<div id="a-propos">
+		<Introduction
+			title="à propos"
+			image={{
+				src: "/images/melanie-casu.webp",
+				description: "lorem"
+			}}
+			description=`Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam
+nulla vitae ullamcorper pretium. Integer mauris sem, scelerisque non
+tempus nec, consequat vitae lectus. Nullam purus libero, efficitur eget
+odio in, mollis laoreet nisl. In gravida finibus augue, at hendrerit erat
+eleifend mollis. In at congue felis. Suspendisse iaculis posuere pulvinar.
+Quisque quis justo id quam cursus dictum. Donec vitae magna sed mauris
+dictum aliquet nec ut nibh.`
+			`
+		/>
 	</div>
+
+	<Skills />
 </Layout>
+<style>
+	html {
+		scroll-behavior: smooth;
+	}
+</style>
