--- a/src/assets/fonts/stylesheet.css
+++ b/src/assets/fonts/stylesheet.css
@@ -187,3 +187,53 @@
 	font-style: italic;
 	font-display: swap;
 }
+
+@font-face {
+	font-family: "Abril Fatface";
+	src:
+		url("./AbrilFatface/AbrilFatface-Regular.woff2") format("woff2"),
+		url("./AbrilFatface/AbrilFatface-Regular.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Bebas Neue";
+	src:
+		url("./BebasNeue/BebasNeue-Regular.woff2") format("woff2"),
+		url("./BebasNeue/BebasNeue-Regular.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Nothing You Could Do";
+	src:
+		url("./NothingYouCouldDo/NothingYouCouldDo.woff2") format("woff2"),
+		url("./NothingYouCouldDo/NothingYouCouldDo.woff") format("woff");
+	font-weight: 100;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Six Caps";
+	src:
+		url("./SixCaps/SixCaps.woff2") format("woff2"),
+		url("./SixCaps/SixCaps.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Zen Loop";
+	src:
+		url("./ZenLoop/ZenLoop-Regular.woff2") format("woff2"),
+		url("./ZenLoop/ZenLoop-Regular.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
