Ajout du contenu texte / Optimisation de l'accessibilité / Ajout des cibles des liens

--- a/src/components/common/Footer.astro
+++ b/src/components/common/Footer.astro
@@ -11,7 +11,7 @@ const { textureFooter } = Astro.props;
 		<div
 			class="flex h-full flex-col flex-nowrap items-center justify-start p-6 pt-14 lg:flex-row lg:justify-between lg:pl-20 lg:pr-40 lg:pt-6"
 		>
-			<img class="logo w-40 opacity-5 md:w-48 lg:w-56" src="/logos/logo-beige.svg" alt="Logo Mélanie Casu" />
+			<img class="logo w-40 opacity-5 md:w-48 lg:w-56" src="/logos/logo-beige.svg" alt="Logo de Mélanie Casu en beige" />
 
 			<div class="mt-[20vh] space-y-12 overflow-hidden text-fantasy-50 lg:mt-0">
 				<div class="link -translate-x-full space-y-4">
