--- a/src/components/homepage/Skills.astro
+++ b/src/components/homepage/Skills.astro
@@ -3,33 +3,33 @@ const skills = [
 	{
 		img: {
 			src: "/skills/astro-mono.svg",
-			alt: "Logo Astro"
+			alt: "Logo d'Astro.js en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/astro-couleur.svg",
-			alt: "Logo Astro"
+			alt: "Logo d'Astro.js dans sa couleur originale"
 		},
 		text: "Astro"
 	},
 	{
 		img: {
 			src: "/skills/react-mono.svg",
-			alt: "Logo React"
+			alt: "Logo de React en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/react-couleur.svg",
-			alt: "Logo React"
+			alt: "Logo de React dans sa couleur originale"
 		},
 		text: "React"
 	},
 	{
 		img: {
 			src: "/skills/redux-mono.svg",
-			alt: "Logo Redux"
+			alt: "Logo de Redux en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/redux-couleur.svg",
-			alt: "Logo Redux"
+			alt: "Logo de Redux dans sa couleur originale"
 		},
 		text: "Redux"
 	},
@@ -37,110 +37,110 @@ const skills = [
 	{
 		img: {
 			src: "/skills/gsap-mono.svg",
-			alt: "Logo GSAP"
+			alt: "Logo de GreenSock Animation Platform en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/gsap-couleur.svg",
-			alt: "Logo GSAP"
+			alt: "Logo de GreenSock Animation Platform dans sa couleur originale"
 		},
 		text: "GSAP"
 	},
 	{
 		img: {
 			src: "/skills/html-mono.svg",
-			alt: "Logo HTML 5"
+			alt: "Logo de HTML5 en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/html-couleur.svg",
-			alt: "Logo HTML 5 couleur"
+			alt: "Logo de HTML5 dans sa couleur originale"
 		},
 		text: "HTML"
 	},
 	{
 		img: {
 			src: "/skills/css-mono.svg",
-			alt: "Logo CSS 3"
+			alt: "Logo de CSS3 en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/css-couleur.svg",
-			alt: "Logo CSS 3"
+			alt: "Logo de CSS3 dans sa couleur originale"
 		},
 		text: "CSS"
 	},
 	{
 		img: {
 			src: "/skills/sass-mono.svg",
-			alt: "Logo Sass"
+			alt: "Logo de Sass en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/sass-couleur.svg",
-			alt: "Logo Sass"
+			alt: "Logo de Sass dans sa couleur originale"
 		},
 		text: "SASS"
 	},
 	{
 		img: {
 			src: "/skills/javascript-mono.svg",
-			alt: "Logo Javascript"
+			alt: "Logo de Javascript en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/javascript-couleur.svg",
-			alt: "Logo Javascript"
+			alt: "Logo de Javacript dans sa couleur originale"
 		},
 		text: "Javascript"
 	},
 	{
 		img: {
 			src: "/skills/wordpress-mono.svg",
-			alt: "Logo Wordpress"
+			alt: "Logo de Wordpress en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/wordpress-couleur.svg",
-			alt: "Logo Wordpress"
+			alt: "Logo de Wordpress dans sa couleur originale"
 		},
 		text: "Wordpress"
 	},
 	{
 		img: {
 			src: "/skills/shopify-mono.svg",
-			alt: "Logo CSS 3"
+			alt: "Logo de Shopify en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/shopify-couleur.svg",
-			alt: "Logo CSS 3"
+			alt: "Logo de Sopify dans sa couleur originale"
 		},
 		text: "Shopify"
 	},
 	{
 		img: {
 			src: "/skills/elementor-mono.svg",
-			alt: "Logo Elementor"
+			alt: "Logo d'Elementor en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/elementor-couleur.svg",
-			alt: "Logo Elementor"
+			alt: "Logo d'Elementor dans sa couleur originale"
 		},
 		text: "Elementor"
 	},
 	{
 		img: {
 			src: "/skills/tailwind-mono.svg",
-			alt: "Logo Tailwind"
+			alt: "Logo de Tailwind en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/tailwind-couleur.svg",
-			alt: "Logo Tailwind"
+			alt: "Logo de Tailwind dans sa couleur originale"
 		},
 		text: "Tailwind"
 	},
 	{
 		img: {
 			src: "/skills/typescript-mono.svg",
-			alt: "Logo Typescript"
+			alt: "Logo de Typescript en vert pin foncé"
 		},
 		imgRvb: {
 			src: "/skills/typescript-couleur.svg",
-			alt: "Logo Typescript"
+			alt: "Logo de Typescript dans sa couleur originale"
 		},
 		text: "Typescript"
 	}
