--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,16 +38,9 @@ const menuLinks = [
 			title="à propos"
 			image={{
 				src: "/images/melanie-casu.webp",
-				description: "lorem"
+				description: "Portrait professionnel d'une développeuse et intégratrice web, assise sur une chaise, en tenue décontractée."
 			}}
-			description=`Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam
-nulla vitae ullamcorper pretium. Integer mauris sem, scelerisque non
-tempus nec, consequat vitae lectus. Nullam purus libero, efficitur eget
-odio in, mollis laoreet nisl. In gravida finibus augue, at hendrerit erat
-eleifend mollis. In at congue felis. Suspendisse iaculis posuere pulvinar.
-Quisque quis justo id quam cursus dictum. Donec vitae magna sed mauris
-dictum aliquet nec ut nibh.`
-			`
+			description=`Je suis Mélanie Casu, reconvertie il y a bientôt deux ans dans le développement web. Spécialisée dans l'intégration et le développement front-end de sites webs, je suis actuellement en alternance dans une agence de communication digitale, et suis la formation "Développeur·se/Intégrateur·trice Web" d'OpenClassrooms.`
 		/>
 	</div>
 
