--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -32,15 +32,10 @@ const menuLinks = [
 	<main class="bg-fantasy-50 bg-texture opacity-0">
 		<Introduction
 			title="projets"
-			description=`Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam
-      nulla vitae ullamcorper pretium. Integer mauris sem, scelerisque non
-      tempus nec, consequat vitae lectus. Nullam purus libero, efficitur eget
-      odio in, mollis laoreet nisl. In gravida finibus augue, at hendrerit erat
-      eleifend mollis.`
-			`
+			description=`Réalisés en entreprise ou dans le cadre de ma formation, on retrouve ici une petite sélection de projets que j'ai pu réaliser, ou auxquels j'ai participé.`
 			image={{
 				src: "/projets/lofi-web.webp",
-				description: "lorem"
+				description: "Ambiance lo-fi avec un ordinateur affichant du code de développement web, vue nocturne en arrière-plan."
 			}}
 		/>
 
