--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -3,13 +3,18 @@ interface Props {
 	url: string;
 	text: string;
 	additionalClass?: string;
+	isExternalLink?: boolean;
 }
 
-const { url = "#", text = "Découvrir", additionalClass } = Astro.props;
+const { url = "#", text = "Découvrir", additionalClass, isExternalLink = false } = Astro.props;
 ---
 
 <div class=`btn cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:w-full relative ${additionalClass}`>
-	<a class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-firefly-900" href={url}>{text}</a>
+	<a
+		target={isExternalLink ? "_blank" : "_self"}
+		class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-firefly-900"
+		href={url}>{text}</a
+	>
 </div>
 
 <style lang="postcss" is:global>
