--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -16,7 +16,7 @@ const { menuLinks } = Astro.props;
 				menuLinks.map((link) => (
 					<li>
 						<a
-							class={`link w-fit text-4xl uppercase leading-normal text-fantasy-50 transition-colors hover:text-firefly-900 lg:text-6xl ${link.transition ? "nav" : ""}`}
+							class={`link w-fit text-4xl uppercase leading-normal text-fantasy-50 transition-colors hover:text-firefly-900 lg:text-6xl ${link.transition ? "nav" : "anchor"}`}
 							href={link.url}
 						>
 							{link.text}
@@ -25,7 +25,7 @@ const { menuLinks } = Astro.props;
 				))
 			}
 		</ul>
-		<img class="mx-auto w-40 md:w-48" src="/logos/logo-beige_darkgreen.svg" alt="Logo Mélanie Casu" />
+		<img class="mx-auto w-40 md:w-48" src="/logos/logo-beige_darkgreen.svg" alt="Logo de Mélanie Casu en beige et vert pin" />
 	</div>
 	<div class="fixed-menu fixed z-40 flex w-full justify-end px-3 py-2 lg:bottom-7 lg:right-7 lg:h-fit lg:w-fit lg:p-0">
 		<div
@@ -58,11 +58,19 @@ const { menuLinks } = Astro.props;
 	const btnMenu = document.querySelector(".fixed-menu .circle");
 	const modal = document.querySelector(".modal-menu");
 	const btnClose = document.querySelector(".close-modal");
+	const anchors = document.querySelectorAll("a.anchor");
 	btnMenu.addEventListener("click", () => {
 		modal.classList.add("active");
 	});
 
 	btnClose.addEventListener("click", () => {
 		modal.classList.remove("active");
+	});
+
+	// Fermer le menu au clic sur les ancres
+	anchors.forEach((anchor) => {
+		anchor.addEventListener("click", () => {
+			modal.classList.remove("active");
+		});
 	});
 </script>
