--- a/src/components/homepage/Skills.astro
+++ b/src/components/homepage/Skills.astro
@@ -150,7 +150,7 @@ const skills = [
 <section class="skills flex flex-col justify-center overflow-hidden bg-fantasy-50 p-4 md:px-10">
 	<div class="overflow-hidden">
 		<h2
-			class="relative z-10 w-fit translate-y-full self-end text-end font-primary text-5xl text-firefly-900 lg:h-1/5 lg:self-start lg:text-start lg:text-7xl xl:text-8xl"
+			class="relative w-fit translate-y-full self-end text-end font-primary text-5xl text-firefly-900 lg:h-1/5 lg:self-start lg:text-start lg:text-7xl xl:text-8xl"
 		>
 			J'ai travaillé avec
 		</h2>
