--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -27,9 +27,9 @@ const { menuLinks } = Astro.props;
 		</ul>
 		<img class="mx-auto w-40 md:w-48" src="/logos/logo-beige_darkgreen.svg" alt="Logo de Mélanie Casu en beige et vert pin" />
 	</div>
-	<div class="fixed-menu fixed z-40 flex w-full justify-end px-3 py-2 lg:bottom-7 lg:right-7 lg:h-fit lg:w-fit lg:p-0">
+	<div class="fixed-menu fixed z-30 flex w-full justify-end px-3 py-2 lg:bottom-7 lg:right-7 lg:h-fit lg:w-fit lg:p-0">
 		<div
-			class="circle z-40 flex h-11 w-24 items-center justify-center rounded-full border-2 border-fantasy-50 bg-firefly-900 lg:h-[75px] lg:w-[75px] lg:cursor-pointer lg:transition-colors lg:hover:bg-firefly-500"
+			class="circle flex h-11 w-24 items-center justify-center rounded-full border-2 border-fantasy-50 bg-firefly-900 lg:h-[75px] lg:w-[75px] lg:cursor-pointer lg:transition-colors lg:hover:bg-firefly-500"
 		>
 			<span class="text-xl text-fantasy-50">menu</span>
 		</div>
