--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Introduction from "../components/common/Introduction.astro";
 import Listing from "../components/projects/Listing.astro";
+import Banner from "../components/common/Banner.astro";
 import listingProjects from "../../src/datas/projects.json";
 
 const menuLinks = [
@@ -30,15 +30,7 @@ const menuLinks = [
 
 <Layout menuLinks={menuLinks} isHome={false} title="Projets" textureFooter={true}>
 	<main class="bg-fantasy-50 bg-texture opacity-0">
-		<Introduction
-			title="projets"
-			description=`Réalisés en entreprise ou dans le cadre de ma formation, on retrouve ici une petite sélection de projets que j'ai pu réaliser, ou auxquels j'ai participé.`
-			image={{
-				src: "/projets/lofi-web.webp",
-				description: "Ambiance lo-fi avec un ordinateur affichant du code de développement web, vue nocturne en arrière-plan."
-			}}
-		/>
-
+		<Banner title="projets" h1="lorem" />
 		<Listing data={listingProjects} />
 	</main>
 </Layout>
